--- a/doc/info/Differential.texi
+++ b/doc/info/Differential.texi
@@ -253,8 +253,8 @@ method.
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  method
 @cat2{ Differential equations ,  Differential-equations }
-@ctindex  Package contrib_ode  @subentry  method
-@cat2{ Package contrib_ode ,  Package-contrib_ode }
+@ptindex  contrib_ode  @subentry  method
+@catpackage{contrib_ode ,   Package-contrib_ode }
 @closecatbox
 
 @end defvr
@@ -268,8 +268,8 @@ order ODEs returned from @mref{ode2}.
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  %c
 @cat2{ Differential equations ,  Differential-equations }
-@ctindex  Package contrib_ode  @subentry  %c
-@cat2{ Package contrib_ode ,  Package-contrib_ode }
+@ptindex  contrib_ode  @subentry  %c
+@catpackage{contrib_ode ,   Package-contrib_ode }
 @closecatbox
 
 @end defvr
@@ -283,8 +283,8 @@ order ODEs returned from @mref{ode2}.
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  %k1
 @cat2{ Differential equations ,  Differential-equations }
-@ctindex  Package contrib_ode  @subentry  %k1
-@cat2{ Package contrib_ode ,  Package-contrib_ode }
+@ptindex  contrib_ode  @subentry  %k1
+@catpackage{contrib_ode ,   Package-contrib_ode }
 @closecatbox
 
 @end defvr
@@ -298,8 +298,8 @@ order ODEs returned from @mref{ode2}.
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  %k2
 @cat2{ Differential equations ,  Differential-equations }
-@ctindex  Package contrib_ode  @subentry  %k2
-@cat2{ Package contrib_ode ,  Package-contrib_ode }
+@ptindex  contrib_ode  @subentry  %k2
+@catpackage{contrib_ode ,   Package-contrib_ode }
 @closecatbox
 
 @end defvr
