--- a/doc/info/Differentiation.texi
+++ b/doc/info/Differentiation.texi
@@ -430,8 +430,8 @@ containing the Cartan coordinates @code{@var{x_1}, ..., @var{x_n}} is parsed.
 @opencatbox{Categories:}
 @ctindex  Differential geometry  @subentry  init_cartan
 @cat2{ Differential geometry ,  Differential-geometry }
-@ctindex  Package cartan  @subentry  init_cartan
-@cat2{ Package cartan ,  Package-cartan }
+@ptindex  cartan  @subentry  init_cartan
+@catpackage{cartan ,   Package-cartan }
 @closecatbox
 @end deffn
 
