--- a/doc/info/Integration.texi
+++ b/doc/info/Integration.texi
@@ -1076,8 +1076,8 @@ for the integrator to produce a good solution.
 @cat2{ Numerical methods ,  Numerical-methods }
 @ctindex  Share packages  @subentry  Introduction to QUADPACK
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package quadpack  @subentry  Introduction to QUADPACK
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  Introduction to QUADPACK
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -1189,8 +1189,8 @@ Examples:
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  quad_qag
 @cat2{ Numerical methods ,  Numerical-methods }
-@ctindex  Package quadpack  @subentry  quad_qag
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  quad_qag
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 @end deffn
 
@@ -1287,8 +1287,8 @@ Note that @code{quad_qags} is more accurate and efficient than @code{quad_qag} f
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  quad_qags
 @cat2{ Numerical methods ,  Numerical-methods }
-@ctindex  Package quadpack  @subentry  quad_qags
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  quad_qags
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 @end deffn
 
@@ -1408,8 +1408,8 @@ Examples:
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  quad_qagi
 @cat2{ Numerical methods ,  Numerical-methods }
-@ctindex  Package quadpack  @subentry  quad_qagi
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  quad_qagi
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 @end deffn
 
@@ -1528,8 +1528,8 @@ Principal Value
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  quad_qawc
 @cat2{ Numerical methods ,  Numerical-methods }
-@ctindex  Package quadpack  @subentry  quad_qawc
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  quad_qawc
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 @end deffn
 
@@ -1643,8 +1643,8 @@ Examples:
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  quad_qawf
 @cat2{ Numerical methods ,  Numerical-methods }
-@ctindex  Package quadpack  @subentry  quad_qawf
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  quad_qawf
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 @end deffn
 
@@ -1794,8 +1794,8 @@ Examples:
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  quad_qawo
 @cat2{ Numerical methods ,  Numerical-methods }
-@ctindex  Package quadpack  @subentry  quad_qawo
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  quad_qawo
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 @end deffn
 
@@ -1935,8 +1935,8 @@ pos;
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  quad_qaws
 @cat2{ Numerical methods ,  Numerical-methods }
-@ctindex  Package quadpack  @subentry  quad_qaws
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  quad_qaws
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 @end deffn
 
@@ -2043,8 +2043,8 @@ more accurate and more efficient that @mrefdot{quad_qags}
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  quad_qagp
 @cat2{ Numerical methods ,  Numerical-methods }
-@ctindex  Package quadpack  @subentry  quad_qagp
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  quad_qagp
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 @end deffn
 
@@ -2072,8 +2072,8 @@ If @var{value} is not given, then the current value of the
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  quad_control
 @cat2{ Numerical methods ,  Numerical-methods }
-@ctindex  Package quadpack  @subentry  quad_control
-@cat2{ Package quadpack ,  Package-quadpack }
+@ptindex  quadpack  @subentry  quad_control
+@catpackage{quadpack ,   Package-quadpack }
 @closecatbox
 @end deffn
 
