--- a/doc/info/Itensor.texi
+++ b/doc/info/Itensor.texi
@@ -81,8 +81,8 @@ the Hamiltonian associated with the theory's scalar field.
 @cat2{ Tensors ,  Tensors }
 @ctindex  Share packages  @subentry  Introduction to itensor
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package itensor  @subentry  Introduction to itensor
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  Introduction to itensor
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -305,8 +305,8 @@ indices. Either a single index or a list of indices (which may be
 null) is acceptable input (see the example under @mref{covdiff}).
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  entertensor
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  entertensor
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -321,8 +321,8 @@ in @var{expr}. @var{old} may be either a symbol or a list of the form
 renamed to @var{new}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  changename
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  changename
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -347,8 +347,8 @@ Lists all tensors in a tensorial expression, complete with their indices. E.g.,
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  listoftens
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  listoftens
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -363,8 +363,8 @@ separated from the covariant indices by a comma (see the examples
 throughout this document).
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ishow
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ishow
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -396,8 +396,8 @@ reasonable manner; however, when it is called to operate upon such an
 illegal expression, its behavior should be considered undefined.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  indices
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  indices
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -467,8 +467,8 @@ ichr2([%3,%5],[%1])*ichr2([%4,%6],[%3])*ichr2([%7,r],[%2]),noeval$
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  rename
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  rename
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -489,8 +489,8 @@ Then sorting occurs after the @code{rename}-ing (see the example
 under @code{rename}).
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  flipflag
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  flipflag
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -517,8 +517,8 @@ used.
 contraction properties with @code{defcon}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  defcon
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  defcon
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -533,8 +533,8 @@ from the (@var{tensor_1}, ..., @var{tensor_n}). @code{remcon(all)} removes all c
 properties from all indexed objects.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  remcon
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  remcon
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -551,8 +551,8 @@ of the terms. The @mref{gcd} switch should be @code{false} if GCD
 cancellations are unnecessary.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  contract
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  contract
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -565,8 +565,8 @@ a built in value already exists as with @code{ichr1}, @code{ichr2},
 @code{icurvature}. See the example under @mref{icurvature}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  indexed_tensor
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  indexed_tensor
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -677,8 +677,8 @@ of covariant and contravariant indices and no derivative indices, and
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  components
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  components
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -689,8 +689,8 @@ Unbinds all values from @var{tensor} which were assigned with the
 @mref{components} function.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  remcomps
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  remcomps
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -746,8 +746,8 @@ The @code{showcomps} command can also display components of a tensor of
 rank higher than 2.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  showcomps
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  showcomps
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -761,8 +761,8 @@ which are needed in forming expressions will not conflict with indices
 already in use (see the example under @mref{indices}).
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  idummy
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  idummy
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -773,8 +773,8 @@ Default value: @code{%}
 Is the prefix for dummy indices (see the example under @mref{indices}).
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  idummyx
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  idummyx
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -788,8 +788,8 @@ generating the next dummy index in the tensor package.  The prefix is
 determined by the option @mref{idummy} (default: @code{%}).
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  icounter
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  icounter
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -810,8 +810,8 @@ capability. This is strictly considered a programming aid and not meant to
 imply that @code{kdelta([i,j],[])} is a valid tensorial object.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  kdelta
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  kdelta
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -841,8 +841,8 @@ Symmetrized Kronecker delta, used in some calculations. For instance:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  kdels
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  kdels
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -855,8 +855,8 @@ consists of an odd permutation, and 0 if some indices in @var{L} are
 repeated.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  levi_civita
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  levi_civita
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -940,8 +940,8 @@ To re-enable the Lisp debugger set *debugger-hook* to nil.
 
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  lc2kdt
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  lc2kdt
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -975,8 +975,8 @@ For example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  lc_l
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  lc_l
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -992,8 +992,8 @@ many expressions more efficiently than the evaluation of @code{levi_civita}.
 For details, see @mref{lc_l}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  lc_u
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  lc_u
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1012,8 +1012,8 @@ For this reason, @code{canten} returns an error if @mref{allsym} is not
 set to @code{true}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  canten
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  canten
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1023,8 +1023,8 @@ set to @code{true}.
 Similar to @mref{canten} but also performs index contraction.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  concan
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  concan
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1044,8 +1044,8 @@ in these indices. Derivative indices are always taken to be symmetric
 unless @code{iframe_flag} is set to @code{true}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  allsym
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  allsym
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -1106,8 +1106,8 @@ illustrates.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  decsym
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  decsym
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1118,8 +1118,8 @@ Removes all symmetry properties from @var{tensor} which has @var{m}
 covariant indices and @var{n} contravariant indices.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  remsym
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  remsym
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1144,8 +1144,8 @@ always return a mathematically correct result.
 The optional second parameter @var{rename}, if set to @code{false}, suppresses renaming.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  canform
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  canform
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1178,8 +1178,8 @@ Lagrangian formulations of a gravitational theory, allowing one to derive
 the Einstein tensor and field equations from the action principle.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  diff
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  diff
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1200,8 +1200,8 @@ tensor. Thus, if @code{imetric} has been bound to @code{G} then
 is chosen appropriately.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  idiff
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  idiff
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1230,8 +1230,8 @@ field. For example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  liediff
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  liediff
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1243,8 +1243,8 @@ Evaluates all occurrences of the @mref{idiff} command in the tensorial
 expression @var{ten}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  rediff
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  rediff
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1261,8 +1261,8 @@ in @var{expr} and then carry out the differentiation by saying
 @code{ev(@var{expr}, idiff)}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  undiff
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  undiff
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1330,8 +1330,8 @@ so @code{evundiff} is no longer necessary for expressions like this:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  evundiff
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  evundiff
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1342,8 +1342,8 @@ Set to zero, in
 @var{expr}, all occurrences of the @var{tensor_i} that have no derivative indices.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  flush
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  flush
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1354,8 +1354,8 @@ Set to zero, in
 @var{expr}, all occurrences of the @var{tensor_i} that have derivative indices.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  flushd
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  flushd
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1380,8 +1380,8 @@ derivative indices as the following example demonstrates.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  flushnd
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  flushnd
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1396,8 +1396,8 @@ been done then @code{idiff(x([],[i]),j)} gives @code{kdelta([i],[j])}.
 @code{coord} is a list of all indexed objects having this property.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  coord
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  coord
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1412,8 +1412,8 @@ that was established by the function @code{coord}.  @code{remcoord(all)}
 removes this property from all indexed objects.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  remcoord
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  remcoord
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1426,8 +1426,8 @@ symbol @code{[]}.  For example, @code{[]p([m],[n])} represents
 @code{g([],[i,j])*p([m],[n],i,j)}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  makebox
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  makebox
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1456,8 +1456,8 @@ symbols as seen from the following:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  conmetderiv
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  conmetderiv
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1552,8 +1552,8 @@ See also @code{weyl.dem} for an example that uses @mref{simpmetderiv}
 and @mref{conmetderiv} together to simplify contractions of the Weyl tensor.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  simpmetderiv
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  simpmetderiv
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1565,8 +1565,8 @@ Set to zero, in @code{expr}, all occurrences of @code{tensor} that have
 exactly one derivative index.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  flush1deriv
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  flush1deriv
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1586,8 +1586,8 @@ The variable @code{imetric} (unbound by default), is bound to the metric, assign
 the @code{imetric(@var{g})} command.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  imetric
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  imetric
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1598,8 +1598,8 @@ Sets the dimensions of the metric. Also initializes the antisymmetry
 properties of the Levi-Civita symbols for the given dimension.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  idim
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  idim
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1617,8 +1617,8 @@ To evaluate the Christoffel symbols for a particular metric, the
 variable @code{imetric} must be assigned a name as in the example under @code{chr2}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ichr1
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ichr1
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1634,8 +1634,8 @@ defined by the relation
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ichr2
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ichr2
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1655,8 +1655,8 @@ kind (@code{ichr2}).  The following notation is used:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  icurvature
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  icurvature
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1712,8 +1712,8 @@ Enter a list of the derivative indices: [];
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  covdiff
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  covdiff
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1725,8 +1725,8 @@ indexed objects in @var{expr} that have a derivative index identical to a
 contravariant index.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  lorentz_gauge
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  lorentz_gauge
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1774,8 +1774,8 @@ curvature tensor using the @code{igeodesic_coords} function.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  igeodesic_coords
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  igeodesic_coords
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1867,8 +1867,8 @@ Since in this version of Maxima, contraction identities for @mref{ifr} and
 function does nothing.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  iframes
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  iframes
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -1913,8 +1913,8 @@ ifb    = (ifr    ifr    - ifr    ifr   ) ifri
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ifb
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ifb
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -1940,8 +1940,8 @@ Lastly, of @code{inonmet_flag} is @code{false},
 @mref{inmc1} will not be present.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  icc1
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  icc1
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -1968,8 +1968,8 @@ Lastly, of @code{inonmet_flag} is @code{false},
 @mref{inmc2} will not be present.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  icc2
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  icc2
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -1993,8 +1993,8 @@ ifc1    = --------------------------------
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ifc1
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ifc1
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2016,8 +2016,8 @@ ifc2   = ifg   ifc1
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ifc2
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ifc2
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2029,8 +2029,8 @@ The frame field. Contracts with the inverse frame field (@mref{ifri}) to
 form the frame metric (@mref{ifg}).
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ifr
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ifr
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2043,8 +2043,8 @@ with the frame metric, it forms the basis of all calculations based on
 frames.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ifri
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ifri
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2056,8 +2056,8 @@ The frame metric. Defaults to @mref{kdelta}, but can be changed using
 @mref{components}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ifg
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ifg
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2069,8 +2069,8 @@ The inverse frame metric. Contracts with the frame metric (@mref{ifg})
 to @mref{kdelta}.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ifgi
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ifgi
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2082,8 +2082,8 @@ Default value: @code{true}
 Specifies how the frame bracket (@mref{ifb}) is computed.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  iframe_bracket_form
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  iframe_bracket_form
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2113,8 +2113,8 @@ g     =- g  inm
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  inm
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  inm
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2136,8 +2136,8 @@ inmc1    = ------------------------------
 (Substitute @mref{ifg} in place of @code{g} if a frame metric is used.)
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  inmc1
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  inmc1
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2162,8 +2162,8 @@ inmc2   = -------------------------------------------
 (Substitute @mref{ifg} in place of @code{g} if a frame metric is used.)
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  inmc2
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  inmc2
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2187,8 +2187,8 @@ ikt1    = ----------------------------------
 (Substitute @mref{ifg} in place of @code{g} if a frame metric is used.)
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ikt1
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ikt1
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2210,8 +2210,8 @@ ikt2   = g   ikt1
 (Substitute @mref{ifg} in place of @code{g} if a frame metric is used.)
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ikt2
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ikt2
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2276,8 +2276,8 @@ by the following example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  itr
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  itr
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2375,8 +2375,8 @@ The behavior of the wedge product operator is controlled by the
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ~
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  ~
+@catpackage{itensor ,   Package-itensor }
 @ctindex  Operators  @subentry  ~
 @cat2{ Operators ,  Operators }
 @closecatbox
@@ -2417,8 +2417,8 @@ declared totally antisymmetric in their covariant indices. Otherwise,
 the results will be incorrect.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  |
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  |
+@catpackage{itensor ,   Package-itensor }
 @ctindex  Operators  @subentry  |
 @cat2{ Operators ,  Operators }
 @closecatbox
@@ -2461,8 +2461,8 @@ For instance:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  extdiff
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  extdiff
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -2523,8 +2523,8 @@ Compute the Hodge-dual of @var{expr}. For instance:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  hodge
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  hodge
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end deffn
 
@@ -2540,8 +2540,8 @@ When set to @code{true}, differential forms will agree with the notion
 of the volume element.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  igeowedge_flag
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  igeowedge_flag
+@catpackage{itensor ,   Package-itensor }
 @closecatbox
 @end defvr
 
@@ -2595,8 +2595,8 @@ of the percent sign in the TeX expression, which may lead to compile errors.
 NB: This version of the @code{tentex} function is somewhat experimental.
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  tentex
-@cat2{ Package itensor ,  Package-itensor }
+@ptindex  itensor  @subentry  tentex
+@catpackage{itensor ,   Package-itensor }
 @ctindex  TeX output  @subentry  tentex
 @cat2{ TeX output ,  TeX-output }
 @closecatbox
@@ -2676,10 +2676,10 @@ function.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package itensor  @subentry  ic_convert
-@cat2{ Package itensor ,  Package-itensor }
-@ctindex  Package ctensor  @subentry  ic_convert
-@cat2{ Package ctensor ,  Package-ctensor }
+@ptindex  itensor  @subentry  ic_convert
+@catpackage{itensor ,   Package-itensor }
+@ptindex  ctensor  @subentry  ic_convert
+@catpackage{ctensor ,   Package-ctensor }
 @closecatbox
 @end deffn
 
