--- a/doc/info/MathFunctions.texi
+++ b/doc/info/MathFunctions.texi
@@ -2603,8 +2603,8 @@ Do @code{load("atrig1");} to use them.
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  atrig1
 @cat2{ Trigonometric functions ,  Trigonometric-functions }
-@ctindex  Package atrig1  @subentry  atrig1
-@cat2{ Package atrig1 ,  Package-atrig1 }
+@ptindex  atrig1  @subentry  atrig1
+@catpackage{atrig1 ,   Package-atrig1 }
 @closecatbox
 @end defvr
 
@@ -2776,8 +2776,8 @@ used to simplify trigonometric function whose arguments are of the form
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  ntrig
 @cat2{ Trigonometric functions ,  Trigonometric-functions }
-@ctindex  Package ntrig  @subentry  ntrig
-@cat2{ Package ntrig ,  Package-ntrig }
+@ptindex  ntrig  @subentry  ntrig
+@catpackage{ntrig ,   Package-ntrig }
 @closecatbox
 @end defvr
 
