--- a/doc/info/Plotting.texi
+++ b/doc/info/Plotting.texi
@@ -321,8 +321,8 @@ corresponding the maximum 36 iterations would not be black.
 @end ifnotinfo
 
 @opencatbox{Categories:}
-@ctindex  Package dynamics  @subentry  julia
-@cat2{ Package dynamics ,  Package-dynamics }
+@ptindex  dynamics  @subentry  julia
+@catpackage{dynamics ,   Package-dynamics }
 @ctindex  Plotting  @subentry  julia
 @cat2{ Plotting ,  Plotting }
 @closecatbox
@@ -392,8 +392,8 @@ Example:
 @end ifnotinfo
 
 @opencatbox{Categories:}
-@ctindex  Package dynamics  @subentry  mandelbrot
-@cat2{ Package dynamics ,  Package-dynamics }
+@ptindex  dynamics  @subentry  mandelbrot
+@catpackage{dynamics ,   Package-dynamics }
 @ctindex  Plotting  @subentry  mandelbrot
 @cat2{ Plotting ,  Plotting }
 @closecatbox
