--- a/doc/info/asympa.texi
+++ b/doc/info/asympa.texi
@@ -16,8 +16,8 @@ numerical analysis.
 @code{load ("asympa")} loads this package.
 
 @opencatbox{Categories:}
-@ctindex  Package asympa  @subentry  asympa
-@cat2{ Package asympa ,  Package-asympa }
+@ptindex  asympa  @subentry  asympa
+@catpackage{asympa ,   Package-asympa }
 @closecatbox
 @end deffn
 
