--- a/doc/info/bitwise.texi
+++ b/doc/info/bitwise.texi
@@ -54,8 +54,8 @@ Inverts all bits of a signed integer. The result of this action reads
 @cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_not
 @cat2{ Binary operations ,  Binary-operations }
-@ctindex  Package bitwise  @subentry  bit_not
-@cat2{ Package bitwise ,  Package-bitwise }
+@ptindex  bitwise  @subentry  bit_not
+@catpackage{bitwise ,   Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -120,8 +120,8 @@ is taken into consideration by the function.
 @cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_and
 @cat2{ Binary operations ,  Binary-operations }
-@ctindex  Package bitwise  @subentry  bit_and
-@cat2{ Package bitwise ,  Package-bitwise }
+@ptindex  bitwise  @subentry  bit_and
+@catpackage{bitwise ,   Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -186,8 +186,8 @@ is taken into consideration by the function.
 @cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_or
 @cat2{ Binary operations ,  Binary-operations }
-@ctindex  Package bitwise  @subentry  bit_or
-@cat2{ Package bitwise ,  Package-bitwise }
+@ptindex  bitwise  @subentry  bit_or
+@catpackage{bitwise ,   Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -252,8 +252,8 @@ is taken into consideration by the function.
 @cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_xor
 @cat2{ Binary operations ,  Binary-operations }
-@ctindex  Package bitwise  @subentry  bit_xor
-@cat2{ Package bitwise ,  Package-bitwise }
+@ptindex  bitwise  @subentry  bit_xor
+@catpackage{bitwise ,   Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -306,8 +306,8 @@ this process. The result of @code{bit_lsh} therefore is @code{int * 2}.
 @cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_lsh
 @cat2{ Binary operations ,  Binary-operations }
-@ctindex  Package bitwise  @subentry  bit_lsh
-@cat2{ Package bitwise ,  Package-bitwise }
+@ptindex  bitwise  @subentry  bit_lsh
+@catpackage{bitwise ,   Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -365,8 +365,8 @@ this process.
 @cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_rsh
 @cat2{ Binary operations ,  Binary-operations }
-@ctindex  Package bitwise  @subentry  bit_rsh
-@cat2{ Package bitwise ,  Package-bitwise }
+@ptindex  bitwise  @subentry  bit_rsh
+@catpackage{bitwise ,   Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -407,8 +407,8 @@ number @code{int}. This function only operates on positive numbers.
 @cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_length
 @cat2{ Binary operations ,  Binary-operations }
-@ctindex  Package bitwise  @subentry  bit_length
-@cat2{ Package bitwise ,  Package-bitwise }
+@ptindex  bitwise  @subentry  bit_length
+@catpackage{bitwise ,   Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -518,7 +518,7 @@ is taken into consideration by the function.
 @cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_onep
 @cat2{ Binary operations ,  Binary-operations }
-@ctindex  Package bitwise  @subentry  bit_onep
-@cat2{ Package bitwise ,  Package-bitwise }
+@ptindex  bitwise  @subentry  bit_onep
+@catpackage{bitwise ,   Package-bitwise }
 @closecatbox
 @end deffn
