--- a/doc/info/bode.texi
+++ b/doc/info/bode.texi
@@ -58,8 +58,8 @@ To use this function write first @code{load("bode")}. See also @mrefdot{bode_pha
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  bode_gain
 @cat2{ Plotting ,  Plotting }
-@ctindex  Package bode  @subentry  bode_gain
-@cat2{ Package bode ,  Package-bode }
+@ptindex  bode  @subentry  bode_gain
+@catpackage{bode ,   Package-bode }
 @closecatbox
 
 @end deffn
@@ -122,8 +122,8 @@ To use this function write first @code{load("bode")}. See also @mrefdot{bode_gai
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  bode_phase
 @cat2{ Plotting ,  Plotting }
-@ctindex  Package bode  @subentry  bode_phase
-@cat2{ Package bode ,  Package-bode }
+@ptindex  bode  @subentry  bode_phase
+@catpackage{bode ,   Package-bode }
 @closecatbox
 
 @end deffn
