--- a/doc/info/combinatorics.texi
+++ b/doc/info/combinatorics.texi
@@ -43,8 +43,8 @@ with the command @code{load("combinatorics")}.
 @opencatbox{Categories:}
 @ctindex  Share packages  @subentry  Package combinatorics
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package combinatorics  @subentry  Package combinatorics
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  Package combinatorics
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @node Functions and Variables for Combinatorics,  , Package combinatorics, combinatorics-pkg
@@ -83,8 +83,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  apply_cycles
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  apply_cycles
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -128,8 +128,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  cyclep
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  cyclep
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -158,8 +158,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_cycles
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_cycles
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -188,8 +188,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_decomp
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_decomp
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -219,8 +219,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_inverse
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_inverse
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -250,8 +250,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_length
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_length
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -277,8 +277,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_lex_next
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_lex_next
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -307,8 +307,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_lex_rank
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_lex_rank
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -336,8 +336,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_lex_unrank
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_lex_unrank
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -365,8 +365,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_next
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_next
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -395,8 +395,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_parity
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_parity
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -425,8 +425,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_rank
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_rank
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -454,8 +454,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_undecomp
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_undecomp
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -483,8 +483,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perm_unrank
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perm_unrank
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -516,8 +516,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  permp
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  permp
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -575,8 +575,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perms
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perms
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -639,8 +639,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  perms_lex
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  perms_lex
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -665,8 +665,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  permult
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  permult
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -701,8 +701,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  permute
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  permute
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -729,8 +729,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package combinatorics  @subentry  random_perm
-@cat2{ Package combinatorics ,  Package-combinatorics }
+@ptindex  combinatorics  @subentry  random_perm
+@catpackage{combinatorics ,   Package-combinatorics }
 @closecatbox
 
 @end deffn
