--- a/doc/info/fractals.texi
+++ b/doc/info/fractals.texi
@@ -62,8 +62,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  sierpinskiale
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  sierpinskiale
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end deffn
@@ -83,8 +83,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  treefale
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  treefale
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end deffn
@@ -104,8 +104,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  fernfale
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  fernfale
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end deffn
@@ -132,8 +132,8 @@ the computing time is also related with the number of grid points.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  mandelbrot_set
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  mandelbrot_set
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end deffn
@@ -161,8 +161,8 @@ Example:
 See also @mref{julia_parameter}.
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  julia_set
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  julia_set
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end deffn
@@ -179,8 +179,8 @@ Its default value is @mref{%i}; we  suggest the  values @code{-.745+%i*.113002},
 @code{.011031-%i*.67037}.
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  julia_parameter
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  julia_parameter
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end defvr
@@ -214,8 +214,8 @@ the computing time is also related with the number of grid points.
 See also @mref{julia_parameter}.
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  julia_sin
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  julia_sin
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end deffn
@@ -246,8 +246,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  snowmap
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  snowmap
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end deffn
@@ -272,8 +272,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  hilbertmap
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  hilbertmap
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end deffn
@@ -292,8 +292,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package fractals  @subentry  sierpinskimap
-@cat2{ Package fractals ,  Package-fractals }
+@ptindex  fractals  @subentry  sierpinskimap
+@catpackage{fractals ,   Package-fractals }
 @closecatbox
 
 @end deffn
