--- a/doc/info/ggf.texi
+++ b/doc/info/ggf.texi
@@ -23,8 +23,8 @@ computation accurate enough.
 See also @mref{ggf}.
 
 @opencatbox{Categories:}
-@ctindex  Package ggf  @subentry  GGFINFINITY
-@cat2{ Package ggf ,  Package-ggf }
+@ptindex  ggf  @subentry  GGFINFINITY
+@catpackage{ggf ,   Package-ggf }
 @closecatbox
 
 @end defvr
@@ -46,8 +46,8 @@ generating functions.
 See also @mref{ggf}.
 
 @opencatbox{Categories:}
-@ctindex  Package ggf  @subentry  GGFCFMAX
-@cat2{ Package ggf ,  Package-ggf }
+@ptindex  ggf  @subentry  GGFCFMAX
+@catpackage{ggf ,   Package-ggf }
 @closecatbox
 
 @end defvr
@@ -70,8 +70,8 @@ To use this function write first @code{load("ggf")}.
 @cat2{ Generating functions ,  Generating-functions }
 @ctindex  Share packages  @subentry  ggf
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package ggf  @subentry  ggf
-@cat2{ Package ggf ,  Package-ggf }
+@ptindex  ggf  @subentry  ggf
+@catpackage{ggf ,   Package-ggf }
 @closecatbox
 
 @end deffn
