--- a/doc/info/hompack.texi
+++ b/doc/info/hompack.texi
@@ -14,8 +14,8 @@ Fortran library HOMPACK, as obtained from Netlib.
 @cat2{ Numerical methods  ,  Numerical-methods- }
 @ctindex  Share packages  @subentry  Introduction to hompack
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package hompack  @subentry  Introduction to hompack
-@cat2{ Package hompack ,  Package-hompack }
+@ptindex  hompack  @subentry  Introduction to hompack
+@catpackage{hompack ,   Package-hompack }
 @closecatbox
 
 @node Functions and Variables for hompack,  , Introduction to hompack
