--- a/doc/info/interpol.texi
+++ b/doc/info/interpol.texi
@@ -16,8 +16,8 @@ For comments, bugs or suggestions, please contact me at @var{'mario AT edu DOT x
 @cat2{ Numerical methods ,  Numerical-methods }
 @ctindex  Share packages  @subentry  Introduction to interpol
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package interpol  @subentry  Introduction to interpol
-@cat2{ Package interpol ,  Package-interpol }
+@ptindex  interpol  @subentry  Introduction to interpol
+@catpackage{interpol ,   Package-interpol }
 @closecatbox
 
 @node Functions and Variables for interpol,  , Introduction to interpol, interpol-pkg
@@ -126,8 +126,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package interpol  @subentry  lagrange
-@cat2{ Package interpol ,  Package-interpol }
+@ptindex  interpol  @subentry  lagrange
+@catpackage{interpol ,   Package-interpol }
 @closecatbox
 
 @end deffn
@@ -188,8 +188,8 @@ Otherwise, @code{charfun2} returns a partially-evaluated result in terms of @mre
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package interpol  @subentry  charfun2
-@cat2{ Package interpol ,  Package-interpol }
+@ptindex  interpol  @subentry  charfun2
+@catpackage{interpol ,   Package-interpol }
 @closecatbox
 
 @end deffn
@@ -268,8 +268,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package interpol  @subentry  linearinterpol
-@cat2{ Package interpol ,  Package-interpol }
+@ptindex  interpol  @subentry  linearinterpol
+@catpackage{interpol ,   Package-interpol }
 @closecatbox
 
 @end deffn
@@ -381,8 +381,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package interpol  @subentry  cspline
-@cat2{ Package interpol ,  Package-interpol }
+@ptindex  interpol  @subentry  cspline
+@catpackage{interpol ,   Package-interpol }
 @closecatbox
 
 @end deffn
@@ -431,8 +431,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package interpol  @subentry  ratinterpol
-@cat2{ Package interpol ,  Package-interpol }
+@ptindex  interpol  @subentry  ratinterpol
+@catpackage{interpol ,   Package-interpol }
 @closecatbox
 
 @end deffn
