--- a/doc/info/lindstedt.texi
+++ b/doc/info/lindstedt.texi
@@ -47,8 +47,8 @@ To use this function write first @code{load("makeOrders")} and @code{load("linds
 @cat2{ Differential equations ,  Differential-equations }
 @ctindex  Share packages  @subentry  Lindstedt
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package lindstedt  @subentry  Lindstedt
-@cat2{ Package lindstedt ,  Package-lindstedt }
+@ptindex  lindstedt  @subentry  Lindstedt
+@catpackage{lindstedt ,   Package-lindstedt }
 @closecatbox
 
 @end deffn
