--- a/doc/info/makeOrders.texi
+++ b/doc/info/makeOrders.texi
@@ -31,8 +31,8 @@ To use this function write first @code{load("makeOrders")}.
 @cat2{ Polynomials ,  Polynomials }
 @ctindex  Share packages  @subentry  makeOrders
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package makeOrders  @subentry  makeOrders
-@cat2{ Package makeOrders ,  Package-makeOrders }
+@ptindex  makeOrders  @subentry  makeOrders
+@catpackage{makeOrders ,   Package-makeOrders }
 @closecatbox
 
 @end deffn
