--- a/doc/info/minpack.texi
+++ b/doc/info/minpack.texi
@@ -16,8 +16,8 @@ Fortran library MINPACK, as obtained from Netlib.
 @cat2{ Optimization ,  Optimization }
 @ctindex  Share packages  @subentry  Introduction to minpack
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package minpack  @subentry  Introduction to minpack
-@cat2{ Package minpack ,  Package-minpack }
+@ptindex  minpack  @subentry  Introduction to minpack
+@catpackage{minpack ,   Package-minpack }
 @closecatbox
 
 @node Functions and Variables for minpack,  , Introduction to minpack, minpack-pkg
