--- a/doc/info/odepack.texi
+++ b/doc/info/odepack.texi
@@ -33,8 +33,8 @@ References:
 @cat2{ Numerical methods ,  Numerical-methods }
 @ctindex  Share packages  @subentry  Introduction to ODEPACK
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package odepack  @subentry  Introduction to ODEPACK
-@cat2{ Package odepack ,  Package-odepack }
+@ptindex  odepack  @subentry  Introduction to ODEPACK
+@catpackage{odepack ,   Package-odepack }
 @closecatbox
 
 @node Getting Started with ODEPACK, Functions and Variables for odepack, Introduction to ODEPACK, odepack-pkg
