--- a/doc/info/ratpow.texi
+++ b/doc/info/ratpow.texi
@@ -57,8 +57,8 @@ Returns the highest power of @var{x} in @code{ratnumer(expr)}
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratp_hipow
 @cat2{ Rational expressions ,  Rational-expressions }
-@ctindex  Package ratpow  @subentry  ratp_hipow
-@cat2{ Package ratpow ,  Package-ratpow }
+@ptindex  ratpow  @subentry  ratp_hipow
+@catpackage{ratpow ,   Package-ratpow }
 @closecatbox
 @end deffn
 
@@ -129,8 +129,8 @@ The CRE form of the following equation contains @code{sqrt(x)} and
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratp_lopow
 @cat2{ Rational expressions ,  Rational-expressions }
-@ctindex  Package ratpow  @subentry  ratp_lopow
-@cat2{ Package ratpow ,  Package-ratpow }
+@ptindex  ratpow  @subentry  ratp_lopow
+@catpackage{ratpow ,   Package-ratpow }
 @closecatbox
 @end deffn
 
@@ -157,8 +157,8 @@ returned coefficients are in CRE form except for numbers.
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratp_coeffs
 @cat2{ Rational expressions ,  Rational-expressions }
-@ctindex  Package ratpow  @subentry  ratp_coeffs
-@cat2{ Package ratpow ,  Package-ratpow }
+@ptindex  ratpow  @subentry  ratp_coeffs
+@catpackage{ratpow ,   Package-ratpow }
 @closecatbox
 @end deffn
 
@@ -183,8 +183,8 @@ returned coefficients are in CRE form except for numbers.
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratp_dense_coeffs
 @cat2{ Rational expressions ,  Rational-expressions }
-@ctindex  Package ratpow  @subentry  ratp_dense_coeffs
-@cat2{ Package ratpow ,  Package-ratpow }
+@ptindex  ratpow  @subentry  ratp_dense_coeffs
+@catpackage{ratpow ,   Package-ratpow }
 @closecatbox
 @end deffn
 
