--- a/doc/info/romberg.texi
+++ b/doc/info/romberg.texi
@@ -149,8 +149,8 @@ A 2-dimensional integration, implemented by nested calls to @code{romberg}.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package romberg  @subentry  romberg
-@cat2{ Package romberg ,  Package-romberg }
+@ptindex  romberg  @subentry  romberg
+@catpackage{romberg ,   Package-romberg }
 @ctindex  Numerical methods  @subentry  romberg
 @cat2{ Numerical methods ,  Numerical-methods }
 @closecatbox
@@ -172,8 +172,8 @@ only the relative error test has any effect on @code{romberg}.
 See also @mref{rombergit} and @mref{rombergmin}.
 
 @opencatbox{Categories:}
-@ctindex  Package romberg  @subentry  rombergabs
-@cat2{ Package romberg ,  Package-romberg }
+@ptindex  romberg  @subentry  rombergabs
+@catpackage{romberg ,   Package-romberg }
 @closecatbox
 
 @end defvr
@@ -190,8 +190,8 @@ this is a heuristic intended to prevent spurious termination when the integrand 
 See also @mref{rombergabs} and @mref{rombergtol}.
 
 @opencatbox{Categories:}
-@ctindex  Package romberg  @subentry  rombergit
-@cat2{ Package romberg ,  Package-romberg }
+@ptindex  romberg  @subentry  rombergit
+@catpackage{romberg ,   Package-romberg }
 @closecatbox
 
 @end defvr
@@ -206,8 +206,8 @@ this is a heuristic intended to prevent spurious termination when the integrand 
 See also @mref{rombergit}, @mref{rombergabs}, and @mref{rombergtol}.
 
 @opencatbox{Categories:}
-@ctindex  Package romberg  @subentry  rombergmin
-@cat2{ Package romberg ,  Package-romberg }
+@ptindex  romberg  @subentry  rombergmin
+@catpackage{romberg ,   Package-romberg }
 @closecatbox
 
 @end defvr
@@ -227,8 +227,8 @@ only the relative error test has any effect on @code{romberg}.
 See also @mref{rombergit} and @mref{rombergmin}.
 
 @opencatbox{Categories:}
-@ctindex  Package romberg  @subentry  rombergtol
-@cat2{ Package romberg ,  Package-romberg }
+@ptindex  romberg  @subentry  rombergtol
+@catpackage{romberg ,   Package-romberg }
 @closecatbox
 
 @end defvr
