--- a/doc/info/stirling.texi
+++ b/doc/info/stirling.texi
@@ -71,8 +71,8 @@ To use this function write first @code{load("stirling")}.
 @cat2{ Gamma and factorial functions ,  Gamma-and-factorial-functions }
 @ctindex  Share packages  @subentry  stirling
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package stirling  @subentry  stirling
-@cat2{ Package stirling ,  Package-stirling }
+@ptindex  stirling  @subentry  stirling
+@catpackage{stirling ,   Package-stirling }
 @closecatbox
 
 @end deffn
