--- a/doc/info/unit.texi
+++ b/doc/info/unit.texi
@@ -79,8 +79,8 @@ units.
 @cat2{ Physical units ,  Physical-units }
 @ctindex  Share packages  @subentry  Introduction to Units
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package unit  @subentry  Introduction to Units
-@cat2{ Package unit ,  Package-unit }
+@ptindex  unit  @subentry  Introduction to Units
+@catpackage{unit ,   Package-unit }
 @closecatbox
 
 
@@ -248,8 +248,8 @@ This would have worked equally well with @code{uforget(N)} or
 See also @mref{uforget}. To use this function write first @code{load("unit")}.
 
 @opencatbox{Categories:}
-@ctindex  Package unit  @subentry  setunits
-@cat2{ Package unit ,  Package-unit }
+@ptindex  unit  @subentry  setunits
+@catpackage{unit ,   Package-unit }
 @closecatbox
 
 @end deffn
@@ -293,8 +293,8 @@ dimension itself is also a legal argument.
 See also @mref{setunits}. To use this function write first @code{load("unit")}.
 
 @opencatbox{Categories:}
-@ctindex  Package unit  @subentry  uforget
-@cat2{ Package unit ,  Package-unit }
+@ptindex  unit  @subentry  uforget
+@catpackage{unit ,   Package-unit }
 @closecatbox
 
 @end deffn
@@ -401,8 +401,8 @@ simplify to a Derived Dimension.
 See also @mref{setunits} and @mref{uforget}. To use this function write first @code{load("unit")}.
 
 @opencatbox{Categories:}
-@ctindex  Package unit  @subentry  convert
-@cat2{ Package unit ,  Package-unit }
+@ptindex  unit  @subentry  convert
+@catpackage{unit ,   Package-unit }
 @closecatbox
 
 @end deffn
@@ -691,8 +691,8 @@ control over their working environment.
 @c @code{setunitprefix} is provided for this case.  Here is an example of its use:
 
 @opencatbox{Categories:}
-@ctindex  Package unit  @subentry  usersetunits
-@cat2{ Package unit ,  Package-unit }
+@ptindex  unit  @subentry  usersetunits
+@catpackage{unit ,   Package-unit }
 @closecatbox
 
 @end defvr
@@ -722,8 +722,8 @@ in the @emph{unit.mac} file is @var{%unitexpand}.
 @c This should be made configurable as a maxima-init.mac controllable option.
 
 @opencatbox{Categories:}
-@ctindex  Package unit  @subentry  metricexpandall
-@cat2{ Package unit ,  Package-unit }
+@ptindex  unit  @subentry  metricexpandall
+@catpackage{unit ,   Package-unit }
 @closecatbox
 
 @end deffn
@@ -735,8 +735,8 @@ This is the value supplied to @code{metricexpandall} during the initial loading
 of @emph{unit}.
 
 @opencatbox{Categories:}
-@ctindex  Package unit  @subentry  %unitexpand
-@cat2{ Package unit ,  Package-unit }
+@ptindex  unit  @subentry  %unitexpand
+@catpackage{unit ,   Package-unit }
 @closecatbox
 
 @end defvr
