--- a/doc/info/wrstcse.texi
+++ b/doc/info/wrstcse.texi
@@ -25,8 +25,8 @@ will make both parameters tolerate in the same way.
 @opencatbox{Categories:}
 @ctindex  Share packages  @subentry  Introduction to wrstcse
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package wrstcse  @subentry  Introduction to wrstcse
-@cat2{ Package wrstcse ,  Package-wrstcse }
+@ptindex  wrstcse  @subentry  Introduction to wrstcse
+@catpackage{wrstcse ,   Package-wrstcse }
 @closecatbox
 
 @node Functions and Variables for wrstcse, , Introduction to wrstcse, wrstcse-pkg
