--- a/doc/info/Symmetries.texi
+++ b/doc/info/Symmetries.texi
@@ -73,8 +73,8 @@ Springer-Verlag, New York Berlin, 308-320, 1989.
 @cat2{ Polynomials ,  Polynomials }
 @ctindex  Share packages  @subentry  Introduction to Symmetries
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package sym  @subentry  Introduction to Symmetries
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  Introduction to Symmetries
+@catpackage{sym ,   Package-sym }
 @closecatbox
 
 
@@ -104,8 +104,8 @@ otherwise the size is set to @var{n}.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  comp2pui
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  comp2pui
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -117,8 +117,8 @@ Similar to @code{comp2ele} and @code{comp2pui}.
 Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  ele2pui
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  ele2pui
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -130,8 +130,8 @@ Similar to @code{comp2ele} and @code{comp2pui}.
 Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  ele2comp
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  ele2comp
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -175,8 +175,8 @@ contracted form (which here depends on only two of its variables) is
 Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  elem
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  elem
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -243,8 +243,8 @@ which means that for 3 variables this gives:
 Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  mon2schur
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  mon2schur
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -275,8 +275,8 @@ decomposes a multi-symmetric polynomial in the multi-contracted form
 Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  multi_elem
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  multi_elem
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -301,8 +301,8 @@ the function @code{elem}.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  multi_pui
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  multi_pui
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -349,8 +349,8 @@ be 2). The function @code{pui} is used in the same way.
 Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  pui
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  pui
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -396,8 +396,8 @@ otherwise it is its first element (as in @code{comp2ele} and
 Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  pui2comp
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  pui2comp
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -412,8 +412,8 @@ elementary symmetric functions from 1 to @var{n}, and if the flag is
 Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  pui2ele
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  pui2ele
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -443,8 +443,8 @@ first @var{m}.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  puireduc
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  puireduc
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -475,8 +475,8 @@ functions.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  schur2comp
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  schur2comp
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -507,8 +507,8 @@ returns the partitioned polynomial associated to the contracted form
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  cont2part
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  cont2part
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -542,8 +542,8 @@ the polynomial.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  contract
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  contract
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -562,8 +562,8 @@ returns the symmetric polynomial associated with the contracted form
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  explose
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  explose
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -583,8 +583,8 @@ The contracted form is rendered with the variables in @var{lvar}.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  part2cont
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  part2cont
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -604,8 +604,8 @@ The contracted form is rendered with the variables in @var{lvar}.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  partpol
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  partpol
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -616,8 +616,8 @@ list @var{lvar}.  If so, it returns a contracted representation like the
 function @code{contract}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  tcontract
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  tcontract
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -629,8 +629,8 @@ list @var{lvar}.  If so, it returns its partitioned representation like
 the function @code{partpol}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  tpartpol
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  tpartpol
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -742,8 +742,8 @@ Functions of @code{sym} used in this function:
 (if the flag @code{direct} is in @code{puissances}).
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  direct
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  direct
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -775,8 +775,8 @@ lists.
 Also see: @code{orbit} for the action of a single symmetric group.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  multi_orbit
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  multi_orbit
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -809,8 +809,8 @@ Functions for changing the representations of a symmetric polynomial:
 @code{partpol}, @code{tcontract}, @code{tpartpol}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  multsym
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  multsym
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -840,8 +840,8 @@ See also @mref{multi_orbit} for the action of a product of symmetric
 groups on a polynomial.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  orbit
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  orbit
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -924,8 +924,8 @@ element is kept per orbit, under the action of @var{SD}.
 @c pui_direct ([y + x + 2*c, y + x + 2*b, y + x + 2*a], [[x, y], [a, b, c]], [3, 4]);
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  pui_direct
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  pui_direct
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -950,8 +950,8 @@ written by P. Esperet, calculates the Kostka number of the partition
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  kostka
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  kostka
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -972,8 +972,8 @@ returns the list of partitions of weight @var{n} and length @var{m}.
 Also see: @mrefcomma{ltreillis} @mref{treillis} and @mrefdot{treinat}
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  lgtreillis
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  lgtreillis
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -995,8 +995,8 @@ equal to @var{m}.
 Also see: @mrefcomma{lgtreillis} @mref{treillis} and @mrefdot{treinat}
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  ltreillis
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  ltreillis
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1017,8 +1017,8 @@ returns all partitions of weight @var{n}.
 See also: @mrefcomma{lgtreillis} @mref{ltreillis} and @mrefdot{treinat}
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  treillis
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  treillis
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1052,8 +1052,8 @@ the natural order.
 See also: @mrefcomma{lgtreillis} @mref{ltreillis} and @mrefdot{treillis}
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  treinat
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  treinat
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1097,8 +1097,8 @@ Also see:
 @code{polynome2ele}, @code{pui2polynome}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  ele2polynome
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  ele2polynome
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1128,8 +1128,8 @@ of the roots of @var{P}.
 The inverse: @code{ele2polynome (@var{l}, @var{x})}
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  polynome2ele
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  polynome2ele
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1143,8 +1143,8 @@ are the @var{k} by @var{k} products of the elements of @var{A}.
 Also see @code{somrac}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  prodrac
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  prodrac
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1185,8 +1185,8 @@ See also:
 @mrefcomma{polynome2ele} @mrefdot{ele2polynome}
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  pui2polynome
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  pui2polynome
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1200,8 +1200,8 @@ The list @var{L} contains elementary symmetric functions of a polynomial
 Also see @code{prodrac}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  somrac
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  somrac
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1458,8 +1458,8 @@ See also:
 @end flushleft
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  resolvante
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  resolvante
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1483,8 +1483,8 @@ See also:
 @end flushleft
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  resolvante_alternee1
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  resolvante_alternee1
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1520,8 +1520,8 @@ See also:
 @end flushleft
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  resolvante_bipartite
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  resolvante_bipartite
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1554,8 +1554,8 @@ See also:
 @end flushleft
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  resolvante_diedrale
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  resolvante_diedrale
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1573,8 +1573,8 @@ See also:
 @end flushleft
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  resolvante_klein
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  resolvante_klein
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1591,8 +1591,8 @@ See also:
 @end flushleft
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  resolvante_klein3
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  resolvante_klein3
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1640,8 +1640,8 @@ See also:
 @end flushleft
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  resolvante_produit_sym
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  resolvante_produit_sym
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1659,8 +1659,8 @@ See also:
 @end flushleft
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  resolvante_unitaire
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  resolvante_unitaire
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1678,8 +1678,8 @@ See also:
 @end flushleft
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  resolvante_vierer
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  resolvante_vierer
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1696,8 +1696,8 @@ returns the associate multinomial coefficient: if the parts of
 @code{@var{r}!/(@var{i_1}! @var{i_2}! ... @var{i_k}!)}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  multinomial
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  multinomial
+@catpackage{sym ,   Package-sym }
 @closecatbox
 @end deffn
 
@@ -1706,8 +1706,8 @@ returns the associate multinomial coefficient: if the parts of
 returns the list of permutations of the list @var{L}.
 
 @opencatbox{Categories:}
-@ctindex  Package sym  @subentry  permut
-@cat2{ Package sym ,  Package-sym }
+@ptindex  sym  @subentry  permut
+@catpackage{sym ,   Package-sym }
 @ctindex  Lists  @subentry  permut
 @cat2{ Lists ,  Lists }
 @closecatbox
