--- a/doc/info/augmented_lagrangian.texi
+++ b/doc/info/augmented_lagrangian.texi
@@ -153,8 +153,8 @@ Same example as before, but this time the gradient is supplied as an argument.
 @cat2{ Optimization ,  Optimization }
 @ctindex  Share packages  @subentry  augmented_lagrangian_method
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package augmented_lagrangian   @subentry  augmented_lagrangian_method
-@cat2{ Package augmented_lagrangian  ,  Package-augmented_lagrangian- }
+@ptindex  augmented_lagrangian   @subentry  augmented_lagrangian_method
+@catpackage{augmented_lagrangian  ,   Package-augmented_lagrangian- }
 @closecatbox
 
 @end deffn
