--- a/doc/info/cobyla.texi
+++ b/doc/info/cobyla.texi
@@ -51,8 +51,8 @@ References:
 @cat2{ Optimization ,  Optimization }
 @ctindex  Share packages  @subentry  Introduction to cobyla
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package cobyla  @subentry  Introduction to cobyla
-@cat2{ Package cobyla ,  Package-cobyla }
+@ptindex  cobyla  @subentry  Introduction to cobyla
+@catpackage{cobyla ,   Package-cobyla }
 @closecatbox
 
 @node Functions and Variables for cobyla, Examples for cobyla, Introduction to cobyla, cobyla-pkg
