--- a/doc/info/f90.texi
+++ b/doc/info/f90.texi
@@ -9,8 +9,8 @@
 @opencatbox{Categories:}
 @ctindex  Share packages  @subentry  Package f90
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package f90  @subentry  Package f90
-@cat2{ Package f90 ,  Package-f90 }
+@ptindex  f90  @subentry  Package f90
+@catpackage{f90 ,   Package-f90 }
 @closecatbox
 @c -----------------------------------------------------------------------------
 
@@ -67,8 +67,8 @@ foo = yyy**4+4*xxx*yyy**3+28*yyy**3+6*xx&
 @cat2{ Global variables ,  Global-variables }
 @ctindex  Translation and compilation  @subentry  f90_output_line_length_max
 @cat2{ Translation and compilation ,  Translation-and-compilation }
-@ctindex  Package f90  @subentry  f90_output_line_length_max
-@cat2{ Package f90 ,  Package-f90 }
+@ptindex  f90  @subentry  f90_output_line_length_max
+@catpackage{f90 ,   Package-f90 }
 @closecatbox
 @end defvr
 
@@ -142,8 +142,8 @@ end
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  f90
 @cat2{ Translation and compilation ,  Translation-and-compilation }
-@ctindex  Package f90  @subentry  f90
-@cat2{ Package f90 ,  Package-f90 }
+@ptindex  f90  @subentry  f90
+@catpackage{f90 ,   Package-f90 }
 @closecatbox
 @end deffn
 
