--- a/doc/info/finance.texi
+++ b/doc/info/finance.texi
@@ -37,8 +37,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  days360
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  days360
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -60,8 +60,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  fv
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  fv
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -83,8 +83,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  pv
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  pv
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -106,8 +106,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  graph_flow
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  graph_flow
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -129,8 +129,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  annuity_pv
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  annuity_pv
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -152,8 +152,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  annuity_fv
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  annuity_fv
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -175,8 +175,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  geo_annuity_pv
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  geo_annuity_pv
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -198,8 +198,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  geo_annuity_fv
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  geo_annuity_fv
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -233,8 +233,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  amortization
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  amortization
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -273,8 +273,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  arit_amortization
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  arit_amortization
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -313,8 +313,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  geo_amortization
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  geo_amortization
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -353,8 +353,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  saving
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  saving
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -376,8 +376,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  npv
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  npv
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -401,8 +401,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  irr
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  irr
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
@@ -427,8 +427,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package finance  @subentry  benefit_cost
-@cat2{ Package finance ,  Package-finance }
+@ptindex  finance  @subentry  benefit_cost
+@catpackage{finance ,   Package-finance }
 @closecatbox
 
 @end deffn
