--- a/doc/info/impdiff.texi
+++ b/doc/info/impdiff.texi
@@ -19,8 +19,8 @@ To use this function write first @code{load("impdiff")}.
 @cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Share packages  @subentry  implicit_derivative
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package impdiff  @subentry  implicit_derivative
-@cat2{ Package impdiff ,  Package-impdiff }
+@ptindex  impdiff  @subentry  implicit_derivative
+@catpackage{impdiff ,   Package-impdiff }
 @closecatbox
 
 @end deffn
