--- a/doc/info/lbfgs.texi
+++ b/doc/info/lbfgs.texi
@@ -30,8 +30,8 @@ scale optimization". @i{Mathematical Programming B} 45:503--528 (1989)
 @cat2{ Optimization ,  Optimization }
 @ctindex  Share packages  @subentry  Introduction to lbfgs
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package lbfgs  @subentry  Introduction to lbfgs
-@cat2{ Package lbfgs ,  Package-lbfgs }
+@ptindex  lbfgs  @subentry  Introduction to lbfgs
+@catpackage{lbfgs ,   Package-lbfgs }
 @closecatbox
 
 @node Functions and Variables for lbfgs, , Introduction to lbfgs, Top
@@ -427,8 +427,8 @@ I& NFN&   FUNC&                    GNORM&                   STEPLENGTH\cr
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package lbfgs  @subentry  lbfgs
-@cat2{ Package lbfgs ,  Package-lbfgs }
+@ptindex  lbfgs  @subentry  lbfgs
+@catpackage{lbfgs ,   Package-lbfgs }
 @closecatbox
 
 @end deffn
@@ -442,8 +442,8 @@ When @code{lbfgs_nfeval_max} is reached,
 @code{lbfgs} returns the result of the last successful line search.
 
 @opencatbox{Categories:}
-@ctindex  Package lbfgs  @subentry  lbfgs_nfeval_max
-@cat2{ Package lbfgs ,  Package-lbfgs }
+@ptindex  lbfgs  @subentry  lbfgs_nfeval_max
+@catpackage{lbfgs ,   Package-lbfgs }
 @closecatbox
 
 @end defvr
@@ -456,8 +456,8 @@ Default value: 25
 to the approximate inverse Hessian matrix which is maintained by @code{lbfgs}.
 
 @opencatbox{Categories:}
-@ctindex  Package lbfgs  @subentry  lbfgs_ncorrections
-@cat2{ Package lbfgs ,  Package-lbfgs }
+@ptindex  lbfgs  @subentry  lbfgs_ncorrections
+@catpackage{lbfgs ,   Package-lbfgs }
 @closecatbox
 
 @end defvr
