--- a/doc/info/mnewton.texi
+++ b/doc/info/mnewton.texi
@@ -16,8 +16,8 @@ equations in one or more variables.
 @cat2{ Numerical methods ,  Numerical-methods }
 @ctindex  Share packages  @subentry  Introduction to mnewton
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package mnewton  @subentry  Introduction to mnewton
-@cat2{ Package mnewton ,  Package-mnewton }
+@ptindex  mnewton  @subentry  Introduction to mnewton
+@catpackage{mnewton ,   Package-mnewton }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -35,8 +35,8 @@ the solution.  If @code{newtonepsilon} is a bigfloat, then @code{mnewton}
 computations are done with bigfloats.  See also @mrefdot{mnewton}
 
 @opencatbox{Categories:}
-@ctindex  Package mnewton  @subentry  newtonepsilon
-@cat2{ Package mnewton ,  Package-mnewton }
+@ptindex  mnewton  @subentry  newtonepsilon
+@catpackage{mnewton ,   Package-mnewton }
 @closecatbox
 @end defvr
 
@@ -51,8 +51,8 @@ if it does not converge or if it converges too slowly.
 See also @mrefdot{mnewton}
 
 @opencatbox{Categories:}
-@ctindex  Package mnewton  @subentry  newtonmaxiter
-@cat2{ Package mnewton ,  Package-mnewton }
+@ptindex  mnewton  @subentry  newtonmaxiter
+@catpackage{mnewton ,   Package-mnewton }
 @closecatbox
 @end defvr
 
@@ -108,8 +108,8 @@ To use this function write first @code{load("mnewton")}.
 See also @mref{newtonepsilon} and @mrefdot{newtonmaxiter}
 
 @opencatbox{Categories:}
-@ctindex  Package mnewton  @subentry  mnewton
-@cat2{ Package mnewton ,  Package-mnewton }
+@ptindex  mnewton  @subentry  mnewton
+@catpackage{mnewton ,   Package-mnewton }
 @closecatbox
 @end deffn
 
