--- a/doc/info/opsubst.texi
+++ b/doc/info/opsubst.texi
@@ -81,8 +81,8 @@ To use this function write first @code{load("opsubst")}.
 @cat2{ Expressions ,  Expressions }
 @ctindex  Share packages  @subentry  opsubst
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package opsubst  @subentry  opsubst
-@cat2{ Package opsubst ,  Package-opsubst }
+@ptindex  opsubst  @subentry  opsubst
+@catpackage{opsubst ,   Package-opsubst }
 @closecatbox
 
 @end deffn
