--- a/doc/info/stringproc.texi
+++ b/doc/info/stringproc.texi
@@ -114,8 +114,8 @@ finally parsed by @ref{parse_string}.
 @cat2{ Strings ,  Strings }
 @ctindex  Share packages  @subentry  Introduction to String Processing
 @cat2{ Share packages ,  Share-packages }
-@ctindex  Package stringproc  @subentry  Introduction to String Processing
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  Introduction to String Processing
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 
@@ -156,8 +156,8 @@ Closes @var{stream} and returns @code{true} if @var{stream} had been open.
 @cat2{ File input ,  File-input }
 @ctindex  File output  @subentry  close
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  close
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  close
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -176,8 +176,8 @@ Example: See @ref{writebyte} .
 @cat2{ File input ,  File-input }
 @ctindex  File output  @subentry  flength
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  flength
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  flength
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -193,8 +193,8 @@ Example: See @ref{writebyte} .
 @opencatbox{Categories:}
 @ctindex  File output  @subentry  flush_output
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  flush_output
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  flush_output
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -218,8 +218,8 @@ i.e. the first element in @var{stream} is in position 1.
 @cat2{ File input ,  File-input }
 @ctindex  File output  @subentry  fposition
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  fposition
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  fposition
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -240,8 +240,8 @@ See also @ref{newline}.
 @opencatbox{Categories:}
 @ctindex  File output  @subentry  freshline
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  freshline
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  freshline
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -257,8 +257,8 @@ The returned characters are removed from @var{stream}.
 Example: See @ref{make_string_output_stream} .
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  get_output_stream_string
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  get_output_stream_string
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -285,8 +285,8 @@ t e x
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  make_string_input_stream
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  make_string_input_stream
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -315,8 +315,8 @@ in this stream can be retrieved by @ref{get_output_stream_string}.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  make_string_output_stream
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  make_string_output_stream
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -336,8 +336,8 @@ See @ref{sprint} for an example of using @code{newline()}.
 @opencatbox{Categories:}
 @ctindex  File output  @subentry  newline
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  newline
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  newline
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -354,8 +354,8 @@ For binary output see @ref{Functions and Variables for binary input and output, 
 @opencatbox{Categories:}
 @ctindex  File output  @subentry  opena
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  opena
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  opena
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -389,8 +389,8 @@ See also @mref{close} and @mrefdot{openw}
 @opencatbox{Categories:}
 @ctindex  File input  @subentry  openr
 @cat2{ File input ,  File-input }
-@ctindex  Package stringproc  @subentry  openr
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  openr
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -410,8 +410,8 @@ See also @mref{close} and @mrefdot{openr}
 @opencatbox{Categories:}
 @ctindex  File output  @subentry  openw
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  openw
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  openw
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -551,8 +551,8 @@ For conversion of objects to strings also see @mrefcomma{concat} @mrefcomma{scon
 @opencatbox{Categories:}
 @ctindex  File output  @subentry  printf
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  printf
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  printf
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -585,8 +585,8 @@ Example: Read the first 16 bytes from a file encrypted with AES in OpenSSL.
 @opencatbox{Categories:}
 @ctindex  File input  @subentry  readbyte
 @cat2{ File input ,  File-input }
-@ctindex  Package stringproc  @subentry  readbyte
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  readbyte
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -603,8 +603,8 @@ Example: See @ref{make_string_input_stream}.
 @opencatbox{Categories:}
 @ctindex  File input  @subentry  readchar
 @cat2{ File input ,  File-input }
-@ctindex  Package stringproc  @subentry  readchar
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  readchar
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -620,8 +620,8 @@ if the end of the file is encountered.
 @opencatbox{Categories:}
 @ctindex  File input  @subentry  readline
 @cat2{ File input ,  File-input }
-@ctindex  Package stringproc  @subentry  readline
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  readline
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -650,8 +650,8 @@ Creating a new line with @code{newline()}.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sprint
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sprint
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 @end deffn
 
@@ -697,8 +697,8 @@ GNU/Linux
 @opencatbox{Categories:}
 @ctindex  File output  @subentry  writebyte
 @cat2{ File output ,  File-output }
-@ctindex  Package stringproc  @subentry  writebyte
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  writebyte
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -772,8 +772,8 @@ and has not been changed.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  adjust_external_format
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  adjust_external_format
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -815,8 +815,8 @@ package stringproc: @"u cannot be converted into a Lisp character.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  alphacharp
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  alphacharp
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  alphacharp
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -833,8 +833,8 @@ Note: See remarks on @ref{alphacharp}.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  alphanumericp
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  alphanumericp
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  alphanumericp
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -860,8 +860,8 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  ascii
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  ascii
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -875,8 +875,8 @@ Returns @code{true} if @var{char_1} and @var{char_2} are the same character.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  cequal
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  cequal
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  cequal
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -892,8 +892,8 @@ alphabetic character. See remarks on @ref{alphacharp}.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  cequalignore
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  cequalignore
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  cequalignore
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -908,8 +908,8 @@ code point of @var{char_2}.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  cgreaterp
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  cgreaterp
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  cgreaterp
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -925,8 +925,8 @@ alphabetic character. See remarks on @ref{alphacharp}.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  cgreaterpignore
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  cgreaterpignore
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  cgreaterpignore
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -941,8 +941,8 @@ See introduction for example.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  charp
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  charp
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  charp
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -989,8 +989,8 @@ Converting a character to a code point via UTF-8-octets may serve as a workaroun
 See @ref{utf8_to_unicode}, @ref{string_to_octets}.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  cint
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  cint
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1005,8 +1005,8 @@ code point of @var{char_2}.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  clessp
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  clessp
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  clessp
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1022,8 +1022,8 @@ alphabetic character. See remarks on @ref{alphacharp}.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  clesspignore
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  clesspignore
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  clesspignore
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1048,8 +1048,8 @@ d e f g h i j k l m n o p q r s t u v w x y z @{ | @} ~
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  constituent
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  constituent
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  constituent
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1075,8 +1075,8 @@ US-ASCII-character is regarded as a digit.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  digitcharp
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  digitcharp
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  digitcharp
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1104,8 +1104,8 @@ Note: See remarks on @ref{alphacharp}.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  lowercasep
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  lowercasep
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  lowercasep
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1119,8 +1119,8 @@ The newline character (ASCII-character 10).
 @opencatbox{Categories:}
 @ctindex  Global variables  @subentry  newline 
 @cat2{ Global variables ,  Global-variables }
-@ctindex  Package stringproc  @subentry  newline 
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  newline 
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end defvr
@@ -1134,8 +1134,8 @@ The space character.
 @opencatbox{Categories:}
 @ctindex  Global variables  @subentry  space   
 @cat2{ Global variables ,  Global-variables }
-@ctindex  Package stringproc  @subentry  space   
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  space   
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end defvr
@@ -1149,8 +1149,8 @@ The tab character.
 @opencatbox{Categories:}
 @ctindex  Global variables  @subentry  tab     
 @cat2{ Global variables ,  Global-variables }
-@ctindex  Package stringproc  @subentry  tab     
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  tab     
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end defvr
@@ -1220,8 +1220,8 @@ Example (continued): Characters defined by names
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  unicode
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  unicode
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1245,8 +1245,8 @@ Examples: Converting Unicode code points to UTF-8 and vice versa.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  unicode_to_utf8
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  unicode_to_utf8
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1262,8 +1262,8 @@ Note: See remarks on @ref{alphacharp}.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  uppercasep
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  uppercasep
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  uppercasep
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1292,8 +1292,8 @@ Given that promise, Maxima avoids parsing UTF-8 and strings can be processed mor
 @opencatbox{Categories:}
 @ctindex  Global variables  @subentry  us_ascii_only
 @cat2{ Global variables ,  Global-variables }
-@ctindex  Package stringproc  @subentry  us_ascii_only
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  us_ascii_only
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end defvr
@@ -1308,8 +1308,8 @@ the UTF-8 encoding of a single character.
 Examples: See @ref{unicode_to_utf8}.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  utf8_to_unicode
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  utf8_to_unicode
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1337,8 +1337,8 @@ The first character in @var{string} is returned with @var{n} = 1.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  charat
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  charat
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1355,8 +1355,8 @@ Returns the list of all characters in @var{string}.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  charlist
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  charlist
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1383,8 +1383,8 @@ Examples:
 See also @ref{parse_string} and @ref{eval_string_lisp}.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  eval_string
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  eval_string
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1412,8 +1412,8 @@ Examples:
 See also @ref{eval_string}.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  parse_string
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  parse_string
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1425,8 +1425,8 @@ See also @ref{eval_string}.
 Returns a copy of @var{string} as a new string. 
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  scopy
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  scopy
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1441,8 +1441,8 @@ Returns a copy of @var{string} as a new string.
 Like @ref{supcase} but uppercase characters are converted to lowercase. 
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sdowncase
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sdowncase
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1457,8 +1457,8 @@ sequence of characters.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  sequal
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  sequal
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sequal
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1474,8 +1474,8 @@ alphabetic character. See remarks on @ref{alphacharp}.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  sequalignore
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  sequalignore
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sequalignore
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1487,8 +1487,8 @@ alphabetic character. See remarks on @ref{alphacharp}.
 @code{sexplode} is an alias for function @code{charlist}.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sexplode
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sexplode
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1517,8 +1517,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  simplode
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  simplode
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1541,8 +1541,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sinsert
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sinsert
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1566,8 +1566,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sinvertcase
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sinvertcase
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1579,8 +1579,8 @@ Examples:
 Returns the number of characters in @var{string}. 
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  slength
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  slength
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1599,8 +1599,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  smake
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  smake
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1623,8 +1623,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  smismatch
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  smismatch
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1655,8 +1655,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  split
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  split
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1669,8 +1669,8 @@ The first character in @var{string} is in position 1.
 For matching characters ignoring case see @ref{ssearch}.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sposition
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sposition
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1699,8 +1699,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sremove
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sremove
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1716,8 +1716,8 @@ Examples:
 Like @code{sremove} except that only the first substring that matches @var{seq} is removed.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sremovefirst
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sremovefirst
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1731,8 +1731,8 @@ Returns a string with all the characters of @var{string} in reverse order.
 See also @mrefdot{reverse}
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sreverse
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sreverse
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1759,8 +1759,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  ssearch
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  ssearch
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1785,8 +1785,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  ssort
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  ssort
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1816,8 +1816,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  ssubst
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  ssubst
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1833,8 +1833,8 @@ Examples:
 Like @code{subst} except that only the first substring that matches @var{old} is replaced.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  ssubstfirst
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  ssubstfirst
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1857,8 +1857,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  strim
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  strim
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1870,8 +1870,8 @@ Examples:
 Like @code{strim} except that only the left end of @var{string} is trimmed. 
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  striml
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  striml
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1883,8 +1883,8 @@ Like @code{strim} except that only the left end of @var{string} is trimmed.
 Like @code{strim} except that only the right end of @var{string} is trimmed.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  strimr
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  strimr
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1899,8 +1899,8 @@ See introduction for example.
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  stringp
 @cat2{ Predicate functions ,  Predicate-functions }
-@ctindex  Package stringproc  @subentry  stringp
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  stringp
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1926,8 +1926,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  substring
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  substring
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1951,8 +1951,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  supcase
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  supcase
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -1981,8 +1981,8 @@ Examples:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  tokens
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  tokens
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2021,8 +2021,8 @@ the resulting base64-string is platform dependent.
 However the decoded string will be equal to the original.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  base64
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  base64
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2042,8 +2042,8 @@ alternatively return the corresponding number or list of octets.
 Example: See @ref{base64}.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  base64_decode
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  base64_decode
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2094,8 +2094,8 @@ WdiwkSPZ3gnIBhM9SuC076gLWZUNs6NqTeE3UzMjDAFhH3jYk1T7mysCvdtIkms=
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  crc24sum
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  crc24sum
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2151,8 +2151,8 @@ The argument may be a binary input stream.
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  md5sum
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  md5sum
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2186,8 +2186,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  mgf1_sha1
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  mgf1_sha1
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2211,8 +2211,8 @@ Example:
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  number_to_octets
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  number_to_octets
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2226,8 +2226,8 @@ Returns a number by concatenating the octets in the list of @var{octets}.
 Example: See @ref{number_to_octets}.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  octets_to_number
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  octets_to_number
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2249,8 +2249,8 @@ Example: RSA encryption OID
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  octets_to_oid
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  octets_to_oid
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2303,8 +2303,8 @@ Example (continued): Using the optional encoding argument
 @end example
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  octets_to_string
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  octets_to_string
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2318,8 +2318,8 @@ Converts an object identifier (OID) to a list of @var{octets}.
 Example: See @ref{octets_to_oid}.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  oid_to_octets
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  oid_to_octets
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2356,8 +2356,8 @@ Note that in case @var{arg} contains German umlauts or other non-ASCII
 characters (resp. octets larger than 127) the @code{SHA1} fingerprint is platform dependent.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sha1sum
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sha1sum
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2385,8 +2385,8 @@ Note that in case @var{arg} contains German umlauts or other non-ASCII
 characters (resp. octets larger than 127) the @code{SHA256} fingerprint is platform dependent.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  sha256sum
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  sha256sum
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
@@ -2408,8 +2408,8 @@ If necessary see @ref{adjust_external_format} for changing the external format.
 See @ref{octets_to_string} for examples and some more information.
 
 @opencatbox{Categories:}
-@ctindex  Package stringproc  @subentry  string_to_octets
-@cat2{ Package stringproc ,  Package-stringproc }
+@ptindex  stringproc  @subentry  string_to_octets
+@catpackage{stringproc ,   Package-stringproc }
 @closecatbox
 
 @end deffn
